azurerm.subnet_nat_gateway_association.vm.tf
resource "azurerm_subnet_nat_gateway_association" "vm" {
  subnet_id      = azurerm_subnet.vm.id
  nat_gateway_id = azurerm_nat_gateway.egress.id
}
