azurerm.virtual_network.lab.tf
resource "azurerm_virtual_network" "lab" {
  name                = "${local.name}-vnet"
  location            = azurerm_resource_group.lab.location
  resource_group_name = azurerm_resource_group.lab.name
  address_space       = ["10.60.0.0/16"]
  tags                = local.tags
}
